Ok version mobile - V1 - A ajouter : footer fixe : accueil=ok / menu = ok

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,14 +1,17 @@
 body {
   margin: 0;
   height: 100vh;
-  #bloc_page {
+  .bloc_page {
     display: flex;
-    min-height: 94.5%;
+    min-height: 74.5%;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     position: relative;
     box-sizing: border-box;
-    border: solid;
+    &--list{
+      min-height: 84.5%;
+      justify-content: flex-start
+    }
   }
   a {
     color: black;
