--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -6,6 +6,5 @@
   color: $secon-color;
   width: 185px;
   height: 32px;
-  margin: 2.5rem 0 2.5em 0;
   border-radius: 0.5rem;
 }
