--- a/sass/layouts/_sectionp.scss
+++ b/sass/layouts/_sectionp.scss
@@ -4,5 +4,11 @@
   justify-content: space-around;
   padding-left: 3vh;
   padding-right: 3vh;
-  margin-top: 1rem;
+}
+
+#soon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
 }
