--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,9 +2,9 @@
 @mixin menu($num-menu, $num-bg-menu) {
   .menu {
     &-#{$num-menu} {
-      height: 13rem;
-      width: 9rem;
-      margin: 3vh 1vh 1vh 1vh;
+      height: 31vh;
+      width: 22vh;
+      margin: 1.5vh 1vh 1.5vh 1vh;
       text-align: center;
       display: flex;
       justify-content: center;
